// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <PlainText /> rendering should render multiple parargraphs of text correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <div
      className="citation plain-text__box"
    >
      <div
        className="label"
      />
      <div
        className="plain-text__box-p plain-text__box-p-1"
        key="undefined-1"
      >
        Lorem Ipsum
      </div>
      <div
        className="plain-text__box-p plain-text__box-p-2"
        key="undefined-2"
      >
        Lorem Ipsum
      </div>
      <div
        className="plain-text__box-p plain-text__box-p-3"
        key="undefined-3"
      >
        Lorem Ipsum
      </div>
      <div
        className="plain-text__box-p plain-text__box-p-4"
        key="undefined-4"
      >
        <a
          className="more-link"
          href="http://gvb.nl"
        >
          Lorem Ipsum
        </a>
      </div>
      <div
        className="plain-text__box-p plain-text__box-p-5"
        key="undefined-5"
      />
    </div>
  </div>
</div>
`;

exports[`Form component <PlainText /> rendering should render no plain text when not visible 1`] = `
<div
  className=""
/>
`;

exports[`Form component <PlainText /> rendering should render plain text correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <div
      className="citation plain-text__box"
    >
      <div
        className="label"
      />
      Lorem Ipsum
    </div>
  </div>
</div>
`;
